<resources>
    <string name="app_name">Fine_Fettle</string>
    <string name="title_activity_maps">Map</string>
    <string name="common_people_login">COMMON PEOPLE LOGIN</string>
    <string name="choose_your_login">CHOOSE YOUR LOGIN</string>
    <string name="doctor_login">DOCTOR LOGIN</string>
    <string name="ambulance_login">AMBULANCE LOGIN</string>
    <string name="bloodbank_login">BLOODBANK LOGIN</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="welcome_doctor">WELCOME DOCTOR</string>
    <string name="login">LOGIN</string>
    <string name="or">OR</string>
    <string name="i_don_t_have_account">I DON\'T HAVE ACCOUNT</string>
    <string name="register">Register</string>
    <string name="hospital_or_clinic_name">Hospital or Clinic Name</string>
    <string name="create_username">Create Username</string>
    <string name="email">EMAIL</string>
    <string name="mobile_no">Mobile no</string>
    <string name="type_password">Type Password</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="gender">Gender</string>
    <string name="doctor_id">Doctor ID</string>
    <string name="male">male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="age">Age</string>
    <string name="experience">Experience</string>
    <string name="pincode">Pincode</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="blood_group">Blood Group</string>
    <string-array name="dropdown">
        <item>CHOOSE SPECIALIZATION</item>
        <item>CARDIO</item>
        <item>LUNGS</item>
        <item>KIDNEY</item>
        <item>BRAIN</item>
    </string-array>
</resources>
