<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/logo3"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.surya.fine_fettle.Doctorlogin">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/extra_large"
        android:fontFamily="serif"
        android:gravity="center_vertical"
        android:padding="@dimen/primary"
        android:text="@string/welcome_doctor"
        android:textColor="@color/black"
        android:textSize="@dimen/secondary_txt1"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="58dp" />


    <EditText
        android:id="@+id/duser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/medium"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginTop="@dimen/medium"
        android:hint="@string/username"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="161dp" />

    <EditText
        android:id="@+id/dpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/medium"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginTop="@dimen/primary"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="251dp" />


    <Button
        android:id="@+id/db1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/medium"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginTop="@dimen/secondary"
        android:background="@android:color/holo_blue_light"
        android:text="@string/login"
        android:textSize="@dimen/secondary_txt"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="336dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="27dp"
        android:layout_height="32dp"
        android:layout_marginBottom="@dimen/duplex"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="@dimen/secondary_txt"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="397dp" />

    <Button
        android:id="@+id/db2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/medium"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginTop="@dimen/duplex"
        android:background="@android:color/holo_blue_light"
        android:text="@string/i_don_t_have_account"
        android:textSize="@dimen/secondary_txt"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="429dp" />
</LinearLayout>
